<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="loginViewModel"
            type="com.example.jenkins_ci_test.login.vm.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".login.views.MainActivity"
        >

        <TextView
            android:id="@+id/loginStatus"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="center"

            android:text="@={loginViewModel.loginResponse.message}"
            android:textSize="18sp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="Login Status"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"

            app:layout_constraintGuide_percent="0.5"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/login_hint_email"
            android:textColorHint="#D3D3D3"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontalGuideline">

            <EditText
                android:id="@+id/input_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress"

                android:paddingBottom="10dp"

                android:text="@={loginViewModel.username}"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:textColorHint="#D3D3D3"
            android:hint="@string/login_password_hint"

            app:layout_constraintTop_toBottomOf="@id/login_input_layout_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <EditText
                android:id="@+id/input_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:paddingBottom="10dp"

                android:text="@={loginViewModel.password}"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"

            android:text="@string/login_button_text"

            app:layout_constraintTop_toBottomOf="@id/login_input_layout_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:onClick="@{(v)->loginViewModel.onLoginClick()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>